# podology_transcriber_whisperx

./: .env.example  .gitignore  Dockerfile  Readme.md  pyproject.toml
kf_wxtrans/: wxtrans.py
podology_transcriber/: assets.py  server.py
transcriber/: wxtrans.py
wxtrans/: wxtrans.py
